src/less/blocks/add_tag_modal.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.add_tag_modal {
  &-hashtag {
    .add_tag_modal__tab_panel-colored,
    .add_tag_modal__tab_panel-top_colored:before,
    .add_tag_modal__tab-active {
      background-color: #5A93CC;
    }
  }

  &-location {
    .add_tag_modal__tab_panel-colored,
    .add_tag_modal__tab_panel-top_colored:before,
    .add_tag_modal__tab-active {
      background-color: #47B8E7;
    }
  }

  &-school {
    .add_tag_modal__tab_panel-colored,
    .add_tag_modal__tab_panel-top_colored:before,
    .add_tag_modal__tab-active {
      background-color: #DC3457;
    }
  }

  &__add_button {
    background-color: rgba(255, 255, 255, 0.15);
    color: white;
  }

  &__cancel_button {
    background-color: #f3f3f3;
    color: #999;
    font-family: "Open Sans", sans-serif;
    font-size: 12px;
    //text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
  }

  &__tabs {
    display: flex;
  }

  &__tab {
    margin-right: 10px;
    padding: 0.5em 1.5em;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background-color: #F3F3F3;
    cursor: pointer;

    &-active {
      color: white;
    }
  }

  &__tab_panel {
    padding: 20px;
    margin: 0 -20px;

    &-top_colored {
      position: relative;

      &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        height: 5px;
      }
    }
  }

  &__added_tags {
    padding-left: 1em;
  }

  &__footer {
    margin-top: 20px;
  }

  &__tags-panel {
    margin-top: 0;
  }
}

